--- a/anmeldetool-web/src/main/web/src/app/events/event-start-list/event-start-list.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/event-start-list/event-start-list.component.html
@@ -81,9 +81,9 @@
         [titel]="'Kategorie 1'"
       ></app-event-start-list-header>
       <app-event-start-list-row
-        *ngFor="let teilnehmer of getTeilnahmenForKategorieK1()"
+        *ngFor="let teilnahme of getTeilnahmenForKategorieK1()"
         [anlass]="anlass"
-        [teilnehmer]="teilnehmer"
+        [teilnahme]="teilnahme"
       ></app-event-start-list-row>
     </ng-container>
 
@@ -94,9 +94,9 @@
         [titel]="'Kategorie 2'"
       ></app-event-start-list-header>
       <app-event-start-list-row
-        *ngFor="let teilnehmer of getTeilnahmenForKategorieK2()"
+        *ngFor="let teilnahme of getTeilnahmenForKategorieK2()"
         [anlass]="anlass"
-        [teilnehmer]="teilnehmer"
+        [teilnahme]="teilnahme"
       ></app-event-start-list-row>
     </ng-container>
 
@@ -107,9 +107,9 @@
         [titel]="'Kategorie 3'"
       ></app-event-start-list-header>
       <app-event-start-list-row
-        *ngFor="let teilnehmer of getTeilnahmenForKategorieK3()"
+        *ngFor="let teilnahme of getTeilnahmenForKategorieK3()"
         [anlass]="anlass"
-        [teilnehmer]="teilnehmer"
+        [teilnahme]="teilnahme"
       ></app-event-start-list-row>
     </ng-container>
 
@@ -120,9 +120,9 @@
         [titel]="'Kategorie 4'"
       ></app-event-start-list-header>
       <app-event-start-list-row
-        *ngFor="let teilnehmer of getTeilnahmenForKategorieK4()"
+        *ngFor="let teilnahme of getTeilnahmenForKategorieK4()"
         [anlass]="anlass"
-        [teilnehmer]="teilnehmer"
+        [teilnahme]="teilnahme"
       ></app-event-start-list-row>
     </ng-container>
 
@@ -135,9 +135,9 @@
         [titel]="'Kategorie 5'"
       ></app-event-start-list-header>
       <app-event-start-list-row
-        *ngFor="let teilnehmer of getTeilnahmenForKategorieK5()"
+        *ngFor="let teilnahme of getTeilnahmenForKategorieK5()"
         [anlass]="anlass"
-        [teilnehmer]="teilnehmer"
+        [teilnahme]="teilnahme"
       ></app-event-start-list-row>
     </ng-container>
 
@@ -150,9 +150,9 @@
         [titel]="'Kategorie 5A'"
       ></app-event-start-list-header>
       <app-event-start-list-row
-        *ngFor="let teilnehmer of getTeilnahmenForKategorieK5A()"
+        *ngFor="let teilnahme of getTeilnahmenForKategorieK5A()"
         [anlass]="anlass"
-        [teilnehmer]="teilnehmer"
+        [teilnahme]="teilnahme"
       ></app-event-start-list-row>
     </ng-container>
 
@@ -165,9 +165,9 @@
         [titel]="'Kategorie 5B'"
       ></app-event-start-list-header>
       <app-event-start-list-row
-        *ngFor="let teilnehmer of getTeilnahmenForKategorieK5B()"
+        *ngFor="let teilnahme of getTeilnahmenForKategorieK5B()"
         [anlass]="anlass"
-        [teilnehmer]="teilnehmer"
+        [teilnahme]="teilnahme"
       ></app-event-start-list-row>
     </ng-container>
 
@@ -179,9 +179,9 @@
       ></app-event-start-list-header>
 
       <app-event-start-list-row
-        *ngFor="let teilnehmer of getTeilnahmenForKategorieK6()"
+        *ngFor="let teilnahme of getTeilnahmenForKategorieK6()"
         [anlass]="anlass"
-        [teilnehmer]="teilnehmer"
+        [teilnahme]="teilnahme"
       ></app-event-start-list-row>
     </ng-container>
 
@@ -194,9 +194,9 @@
         [titel]="'Kategorie Damen'"
       ></app-event-start-list-header>
       <app-event-start-list-row
-        *ngFor="let teilnehmer of getTeilnahmenForKategorieKD()"
+        *ngFor="let teilnahme of getTeilnahmenForKategorieKD()"
         [anlass]="anlass"
-        [teilnehmer]="teilnehmer"
+        [teilnahme]="teilnahme"
       ></app-event-start-list-row>
     </ng-container>
 
@@ -209,9 +209,9 @@
         [titel]="'Kategorie Herren'"
       ></app-event-start-list-header>
       <app-event-start-list-row
-        *ngFor="let teilnehmer of getTeilnahmenForKategorieKH()"
+        *ngFor="let teilnahme of getTeilnahmenForKategorieKH()"
         [anlass]="anlass"
-        [teilnehmer]="teilnehmer"
+        [teilnahme]="teilnahme"
       ></app-event-start-list-row>
     </ng-container>
 
@@ -223,9 +223,9 @@
       ></app-event-start-list-header>
 
       <app-event-start-list-row
-        *ngFor="let teilnehmer of getTeilnahmenForKategorieK7()"
+        *ngFor="let teilnahme of getTeilnahmenForKategorieK7()"
         [anlass]="anlass"
-        [teilnehmer]="teilnehmer"
+        [teilnahme]="teilnahme"
       ></app-event-start-list-row>
     </ng-container>
 
