--- a/anmeldetool-web/src/main/web/src/app/events/event-start-list/event-start-list-row/event-start-list-row.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/event-start-list/event-start-list-row/event-start-list-row.component.html
@@ -1,10 +1,10 @@
 <div class="row">
   <div class="col-sm-1">
-    {{ teilnehmer.teilnahmen.anlassLinks[0].startnummer }}
+    {{ teilnahme.talDTOList[0].startnummer }}
   </div>
-  <div class="col-sm-2">{{ teilnehmer.name }}</div>
-  <div class="col-sm-2">{{ teilnehmer.vorname }}</div>
-  <div class="col-sm-1">{{ teilnehmer.jahrgang }}</div>
+  <div class="col-sm-2">{{ teilnahme.teilnehmer.name }}</div>
+  <div class="col-sm-2">{{ teilnahme.teilnehmer.vorname }}</div>
+  <div class="col-sm-1">{{ teilnahme.teilnehmer.jahrgang }}</div>
   <div *ngIf="anlass.abteilungFix" class="col-sm-1">
     {{ abteilung }}
   </div>
@@ -14,10 +14,10 @@
   </div>
   <div *ngIf="!anlass.anlageFix" class="col-sm-1"></div>
   <div *ngIf="anlass.startgeraetFix" class="col-sm-2">
-    {{ teilnehmer.teilnahmen.anlassLinks[0].startgeraet }}
+    {{ teilnahme.talDTOList[0].startgeraet }}
   </div>
   <div *ngIf="!anlass.startgeraetFix" class="col-sm-2"></div>
   <div class="col-sm-2">
-    {{ teilnehmer.teilnahmen.anlassLinks[0].meldeStatus }}
+    {{ teilnahme.talDTOList[0].meldeStatus }}
   </div>
 </div>
